--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jaimin Modi
-logo: /assets/img/headshot_circle.png
-#description: text below image
-show_downloads: true
+logo: /assets/img/headshot_circle.jpg
+description: Lead Software Engineer
+# show_downloads: true
 theme: jekyll-theme-minimal
